--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <!--[if !IE]->
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  <div class="wrapper">
   <ul class="topnav" id="myTopnav">
     <li><a href="#" id="home">HOME</a></li>
     <li><a href="#" id="coding">CODING</a></li>
@@ -53,6 +52,7 @@
         <div class="projectcontent">
           <div class="coding">
             <a target="_blank" href="https://nguyendthinh.github.io/simonsays/"><img class="projecticon" src="./img/iSimonSays.png" /></a>
+            <b>Click on the screencap for a live demo!</b><br>
             <p>My futuristic take on the classic Simon Says game where one must repeat exactly the sequence of colors that Simon says to repeat.
               I used JavaScript in conjunction with a jQuery library in order to successfully program the logic behind the game.</p>
               <p> By combining recursive functions with the setTimeout and setInterval methods, the "computer" is able to remember and animate the sequence of colors
@@ -66,7 +66,8 @@
                   <div class="projectcontent">
                     <div class="coding">
                       <a target="_blank" href="https://nguyendthinh.github.io/hey-im-bored-angular/#/"><img class="projecticon" src="./img/heyimbored.png" /></a>
-                      <b>In Collaboration with: Donovan Allen, Juliet Berman, and Diana Gobar</b></br>
+                      <b>In Collaboration with: Donovan Allen, Juliet Berman, and Diana Gobar</b>
+                      <b>Click on the screencap for a live demo!</b><br>
                       <p>A fun application that aims at helping people find nearby events at a last-minute notice... or when they simply need their boredom relieve right away!</p>
                       <p>This is a MEAN stack (MongoDB, Express, Angular, Node) application that utilizes a RESTful server and integration with a third party API that specializes in
                         listing nearby local events. The application retrieves relevant data based on the location that the user put in as well as the interest that they select!</p>
@@ -78,6 +79,7 @@
                     <div class="projectcontent">
                       <div class="coding">
                         <a target="_blank" href="https://nguyendthinh.github.io/BlockParty/"><img class="projecticon" src="./img/blockparty.png" /></a>
+                        <b>Click on the screencap for a live demo!</b><br>
                         <p>A color-based game that I created using React and vanilla JavaScript. The objective of the game is to get every block on the gameboard to be the same color.
                           In order to do that, just click on a block and watch as the adjacent blocks change to the color of the block that you clicked on! But watch out, every 20 seconds
                           the board will change a few blocks on the gameboard to a different color to try to mess you up. Win the game for a cool outcome!</p>
@@ -89,6 +91,7 @@
                       <div class="projectcontent">
                         <div class="coding">
                           <a target="_blank" href="https://thinh-sneaker-site.herokuapp.com/brands"><img class="projecticon" src="./img/decadefootwear.png" /></a>
+                          <b>Click on the screencap for a live demo!</b><br>
                           <p>An ongoing project: I plan on creating a fully-functional shoe shopping website for my cousin and his shoe business, Decade Footwear.
                             The foundation for this website so far is built on Ruby on Rails.</p>
                             <p>I have successfully implemented a shopping cart feature as well as an admin/user login and the ability for admin to perform CRUD actions
@@ -214,19 +217,9 @@
                                 <h3 style="margin-top: 0;"><a target="_blank" href="https://www.linkedin.com/in/thinhdnguyen">Linkedin</a> • <a target="_blank" href="https://github.com/nguyendthinh">Github</a></h3>
                               </div>
                               <div class="footer">
-                                All work Copyright © 2017 Thinh Nguyen 
+                                All work Copyright © 2017 Thinh Nguyen
                               </div>
                             </main>
-
-                            <div class="push"></div>
-
-                          </div>
-
-                            <!-- <footer>
-                              Copyright 2016 Thinh Nguyen
-                            </footer> -->
-
-                            <!-- ////// -->
 
                             <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
                             <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
