--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 </section>
 
               </div>
+              <div class="pusher"></div>
               <div class="footer">
                 All work Copyright © 2017 Thinh Nguyen
               </div>
@@ -212,6 +213,8 @@
 
                           </section>
                         </div>
+
+                        <div class="pusher"></div>
                         <div class="footer">
                           All work Copyright © 2017 Thinh Nguyen
                         </div>
@@ -236,10 +239,16 @@
                               <h3>nguyendthinh@outlook.com</h3>
                               <h3 style="margin-top: 0;"><a target="_blank" href="https://www.linkedin.com/in/thinhdnguyen">Linkedin</a> • <a target="_blank" href="https://github.com/nguyendthinh">Github</a></h3>
                             </div>
+
+                            <div class="pusher"></div>
                             <div class="footer">
                               All work Copyright © 2017 Thinh Nguyen
                             </div>
                           </main>
+
+                          <!-- <div class="footer">
+                            All work Copyright © 2017 Thinh Nguyen
+                          </div> -->
 
                           <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
                           <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
