--- a/index.html
+++ b/index.html
@@ -236,17 +236,19 @@
                                 up with creative solutions that are tailored to a diverse clientele.</p>
                                 <a target="_blank" href="./ThinhNguyen.pdf"><button>VIEW MY RESUME</button></a>
                               </div>
-                              <h3>nguyendthinh@outlook.com</h3>
-                              <h3 style="margin-top: 0;"><a target="_blank" href="https://www.linkedin.com/in/thinhdnguyen">Linkedin</a> • <a target="_blank" href="https://github.com/nguyendthinh">Github</a></h3>
-                            </div>
+                              <div id="contact">
+                                <a target="_blank" href="mailto:nguyendthinh@outlook.com"><img class="logo" src="./img/email.png" /></a>
+                                <a target="_blank" href="https://www.linkedin.com/in/thinhdnguyen"><img class="logo" src="./img/linkedin.png" /></a>
+                                <a target="_blank" href="https://github.com/nguyendthinh"><img class="logo" src="./img/github.png" /></a>
+                              </div>
 
-                            <div class="pusher"></div>
-                            <div class="footer">
-                              All work Copyright © 2017 Thinh Nguyen
-                            </div>
-                          </main>
+                              <div class="pusher"></div>
+                              <div class="footer">
+                                All work Copyright © 2017 Thinh Nguyen
+                              </div>
+                            </main>
 
-                          <!-- <div class="footer">
+                            <!-- <div class="footer">
                             All work Copyright © 2017 Thinh Nguyen
                           </div> -->
 
