--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@
                                 <a target="_blank" href="https://www.linkedin.com/in/thinhdnguyen"><img class="logo" src="./img/linkedin.png" /></a>
                                 <a target="_blank" href="https://github.com/nguyendthinh"><img class="logo" src="./img/github.png" /></a>
                               </div>
+                            </div>
+                          </div>
 
                               <div class="pusher"></div>
                               <div class="footer">
