seperated html pages

--- a/about.html
+++ b/about.html
@@ -28,17 +28,34 @@
       <a id="dropbox" href-"javascript:void(0);" onclick="navBar()">&#9776;</a>
     </li>
   </ul>
-  <!-- ////// -->
-  <main id="homepage">
-    <div id="introcontent">
-      <h1>THINH NGUYEN</h1>
-      <div id="line"></div>
-      <h2>Fullstack Web Developer</h2>
-      <h2>Advertiser</h2>
-      <h2>Digital Designer</h2>
-    </div>
-  </main>
 
+  <main id="aboutpage">
+    <h1 class="sectiontitle">ABOUT</h1>
+    <p>Almost everything you need to know about me.</p>
+    <div id="aboutcontent">
+      <div id="bio">
+        <div id="profilepic"></div>
+        <div id="profiledescription">
+          <p>As a web developer with a background in advertising
+            and graphic design, my mission is to create visually-appealing
+            web-based applications that effectively convey my client’s
+            branding to consumers. My experience allows me to adapt and come
+            up with creative solutions that are tailored to a diverse clientele.</p>
+            <a target="_blank" href="./ThinhNguyen.pdf"><button>VIEW MY RESUME</button></a>
+          </div>
+          <div id="contact">
+            <a target="_blank" href="mailto:nguyendthinh@outlook.com"><img class="logo" src="./img/email.png" /></a>
+            <a target="_blank" href="https://www.linkedin.com/in/thinhdnguyen"><img class="logo" src="./img/linkedin.png" /></a>
+            <a target="_blank" href="https://github.com/nguyendthinh"><img class="logo" src="./img/github.png" /></a>
+          </div>
+        </div>
+      </div>
+
+          <div class="pusher"></div>
+          <div class="footer">
+            All work Copyright © 2017 Thinh Nguyen
+          </div>
+        </main>
 
                           <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
                           <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
