--- a/coding.html
+++ b/coding.html
@@ -9,13 +9,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
+  <!-- <link rel="stylesheet" href="css/bootstrap2.css"> -->
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Righteous|Lalezar|Cabin" rel="stylesheet">
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
-<body>
+<body style="height: auto">
   <!--[if !IE]->
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
