fix box-sizing issue

--- a/coding.html
+++ b/coding.html
@@ -9,10 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
-  <!-- <link rel="stylesheet" href="css/bootstrap2.css"> -->
-
+  <link rel="stylesheet" href="css/bootstrap2.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
   <link href="https://fonts.googleapis.com/css?family=Righteous|Lalezar|Cabin" rel="stylesheet">
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -21,15 +22,41 @@
   <!--[if !IE]->
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  <ul class="topnav" id="myTopnav">
-    <li><a href="index.html" id="home">HOME</a></li>
-    <li><a href="coding.html" id="coding">CODING</a></li>
-    <li><a href="design.html" id="design">DESIGN</a></li>
-    <li><a href="about.html" id="about">ABOUT</a></li>
-    <li class="icon">
-      <a id="dropbox" href-"javascript:void(0);" onclick="navBar()">&#9776;</a>
-    </li>
-  </ul>
+  <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle bigger" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <!-- <span class="sr-only">Toggle navigation</span> Menu  -->
+                    <i class="fa fa-bars"></i>
+                </button>
+                <!-- <a class="navbar-brand page-scroll" href="#page-top" >JE</a> -->
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-center">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="coding.html">Coding</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="design.html">Design</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="about.html">About</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
 
   <main id="codingpage">
     <h1 class="sectiontitle">CODING</h1>
@@ -123,6 +150,7 @@
                           <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
                           <script src="js/plugins.js"></script>
                           <script src="js/main.js"></script>
+                          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
                           <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
                           <script>
