minor changes and fixes

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
             web-based applications that effectively convey my client’s
             branding to consumers. My experience allows me to adapt and come
             up with creative solutions that are tailored to a diverse clientele.</p>
-            <a target="_blank" href="./ThinhNguyen.pdf"><button>VIEW MY RESUME</button></a>
+            <a target="_blank" href="./ThinhNguyenResume.pdf"><button>VIEW MY RESUME</button></a>
           </div>
           <div id="contact">
             <a target="_blank" href="mailto:nguyendthinh@outlook.com"><img class="logo" src="./img/email.png" /></a>
@@ -82,7 +82,7 @@
 
           <div class="pusher"></div>
           <div class="footer">
-            All work Copyright © 2017 Thinh Nguyen
+            All work Copyright © 2018 Thinh Nguyen
           </div>
         </main>
 
