clean some things up

--- a/coding.html
+++ b/coding.html
@@ -118,19 +118,17 @@
                 </div>
               </div>
 
-              <div class="portfolioproject" style="background-image: url('./img/sneakers.jpg')">Decade Footwear</div>
+              <div class="portfolioproject" style="background-image: url('./img/dance.png')">Dance Website</div>
               <div class="projectcontent">
                 <div class="coding">
-                  <img class="projecticon" src="./img/decadefootwear.png" />
-                  <p>An ongoing project: I plan on creating a fully-functional shoe shopping website for my cousin and his shoe business, Decade Footwear.
-                    The foundation for this website so far is built on Ruby on Rails.</p>
-                    <p>I have successfully implemented a shopping cart feature as well as an admin/user login and the ability for admin to perform CRUD actions
-                      on the shoe inventory. I am currently laying out the plans to implement other shopping site features as well as implement an Angular front-end.</p>
+                  <img class="projecticon" src="./img/dancing.jpg" />
+                  <p>A minimalistic website that I've made for a friend who is a dancer to showcase his unique personality as well as dancing chops.
+                    jQuery and Bootstrap were mostly implemented in the creation of this website. </p>
                       <div>
-                        <a target="_blank" href="https://thinh-sneaker-site.herokuapp.com/brands">
+                        <a target="_blank" href="http://juliuselegido.com/">
                           <button class="demo">LIVE DEMO</button>
                         </a>
-                        <a target="_blank" href="https://github.com/nguyendthinh/projectTwoShoes">
+                        <a target="_blank" href="https://github.com/nguyendthinh/juliuselegido">
                           <button class="demo">SOURCE CODE</button>
                         </a>
                       </div><br>
